🚨 Fix linter warnings #97
Signed-off-by: Marcus Fihlon <marcus@fihlon.swiss>